feat(hw-7):added the Banner section

--- a/index.html
+++ b/index.html
@@ -4,11 +4,88 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Raleway:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
+  <header class="header">
+    <div class="header__top">
+      <div class="container">
+        <div class="header__top-inner">
+          <div class="logo">
+            <a href="" class="logo__link">
+              <img class="logo__img" src="/images/logo.svg" alt="logo">
+            </a>
+          </div>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__link" href="">features</a>
+              </li>
+            </ul>
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__link" href="">About</a>
+              </li>
+            </ul>
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__link" href="">Pricing</a>
+              </li>
+            </ul>
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__link" href="">Reviews</a>
+              </li>
+            </ul>
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__link" href="">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+
+    <div class="header__content">
+      <div class="container">
+        <div class="wrap">
+          <div class="header__content-inner">
+            <div class="logo logo--size--lg">
+              <a href="" class="logo__link">
+                <img class="logo__img" src="/images/logo-lg.svg" alt="logo">
+              </a>
+            </div>
+            <h1 class="header__content-title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+            <div class="header__content-separator"></div>
+            <div class="header__content-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+            <a class="header__content-button" href="#">Download</a>
+          </div>
+
+          <div class="header__form">
+            <h4 class="header__form-title">Try Your <span>FREE</span> Trial Today</h4>
+            <div class="header__form-fields">
+              <div class="header__form-fild">
+                <input type="text" placeholder="Name">
+              </div>
+              <div class="header__form-fild">
+                <input type="email" placeholder="Email">
+              </div>
+              <div class="header__form-fild">
+                <input type="password" placeholder="Password">
+              </div>
+            </div>
+            <button class="header__form-button">Get started</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 
 </body>
 </html>
