feat(hw-8):added the feedback section

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Raleway:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Raleway:wght@300;400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
   <header class="header">
     <div class="header__top">
@@ -71,13 +74,13 @@
             <h4 class="header__form-title">Try Your <span>FREE</span> Trial Today</h4>
             <div class="header__form-fields">
               <div class="header__form-fild">
-                <input type="text" placeholder="Name">
+                <input class="header__input" type="text" placeholder="Name">
               </div>
               <div class="header__form-fild">
-                <input type="email" placeholder="Email">
+                <input class="header__input" type="email" placeholder="Email">
               </div>
               <div class="header__form-fild">
-                <input type="password" placeholder="Password">
+                <input class="header__input" type="password" placeholder="Password">
               </div>
             </div>
             <button class="header__form-button">Get started</button>
@@ -87,5 +90,39 @@
     </div>
   </header>
 
+  <section class="feedback">
+    <div class="container">
+      <div class="feedback__content">
+        <div class="feedback__headline">
+          <h2 class="feedback__headline-title">contact us</h2>
+          <div class="feedback__headline-separator"></div>
+          <p class="feedback__headline-subtitle">Lorem ipsum dolor sit amet, consectetur adioiscing elit</p>
+        </div>
+        <div class="feedback__wrapper">
+          <div class="feedback__form">
+            <div class="feedback__form-fields">
+              <div class="feedback__form-fild">
+                <input class="feedback__input" type="text" placeholder="Name">
+              </div>
+              <div class="feedback__form-fild">
+                <input class="feedback__input" type="email" placeholder="Email">
+              </div>
+              <div class="feedback__form-fild">
+                <input class="feedback__input" type="password" placeholder="Password">
+              </div>
+            </div>
+          </div>
+          <div class="feedback__text">
+            <textarea class="feedback__textarea" name="" id="" cols="60" rows="13" placeholder="Message"></textarea>
+          </div>
+        </div>
+        <div class="feedback__btn">
+          <button class="feedback__button">Send message</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
+
 </html>
